--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Roxana Garrido - Curriculum Vitae</title>
+        <title>Adrià Ferrer - Curriculum Vitae</title>
         <link rel="icon" type="image/x-icon" href="assets/img/home.png" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" crossorigin="anonymous"></script>
@@ -19,7 +19,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
-                <span class="d-block d-lg-none">Roxana Garrido</span>
+                <span class="d-block d-lg-none">Adrià Ferrer</span>
                 <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/cv1.png" alt="..." /></span>
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
@@ -40,8 +40,8 @@
             <section class="resume-section" id="about">
                 <div class="resume-section-content">
                     <h1 class="mb-0">
-                        Roxana
-                        <span class="text-primary">Garrido</span>
+                        Adrià
+                        <span class="text-primary">Ferrer</span>
                     </h1>
                     <div class="subheading mb-5">
                         Carrer ..... - Terrassa · Barcelona 08... · (+34) 666 111 222·
@@ -50,8 +50,8 @@
                     <p class="lead mb-5">Estudiant d'Informàtica cursant el Cicle Formatiu de Grau Superior (FP) en Desenvolupament d'Aplicacions Multiplataforma l'Institut Nicolau Copèrnic de Terrassa.</p>
                     <p class="lead mb-5">Adquirint coneixements en programació JAVA, gestió de bases de dades SQL y NoSQL, Llenguatges HTML5 y CSS3, programació web Apache i PHP8, gestió de sistemes informàtics Linux i Windows, entre d'altres.</p>
                     <div class="social-icons">
-                        <a class="social-icon" href="https://www.linkedin.com/in/garridoroxan"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="social-icon" href="https://github.com/robertoferrero/Portfoli"><i class="fab fa-github"></i></a>
+                        <a class="social-icon" href="https://www.linkedin.com/in/adrià-ferrer-sanz-53829222b/"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="social-icon" href="https://github.com/Adrixcven/Portfoli"><i class="fab fa-github"></i></a>
                          <!-- <a class="social-icon" href="#"><i class="fab fa-twitter"></i></a>-->
                          <!-- <a class="social-icon" href="#"><i class="fab fa-facebook-f"></i></a>-->  
                     </div>
