--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
                 <ul class="navbar-nav">
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">Perfil</a></li>
                     <!-- <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experiencia</a></li> -->
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Educació</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Habilitats</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interessos</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Projectes</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Educación</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Habilidades</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Intereses</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Proyectos</a></li>
                 </ul>
             </div>
         </nav>
@@ -47,8 +47,8 @@
                         Carrer ..... - Terrassa · Barcelona 08... · (+34) 666 111 222·
                         <a href="mailto:email@gmail.com">email@gmail.com</a>
                     </div>
-                    <p class="lead mb-5">Estudiant d'Informàtica cursant el Cicle Formatiu de Grau Superior (FP) en Desenvolupament d'Aplicacions Multiplataforma l'Institut Nicolau Copèrnic de Terrassa.</p>
-                    <p class="lead mb-5">Adquirint coneixements en programació JAVA, gestió de bases de dades SQL y NoSQL, Llenguatges HTML5 y CSS3, programació web Apache i PHP8, gestió de sistemes informàtics Linux i Windows, entre d'altres.</p>
+                    <p class="lead mb-5">Estudiante de informatica cursando el Ciclo Formativo de Grado Superior en Desarrollo de Aplicaciones Multiplataforma en el instituto Nicolau Copernic de Terrassa.</p>
+                    <p class="lead mb-5">Adquiriendo conocimientos en programacion JAVA, gestion de base de datos SQL y NoSQL, Lenguajes HTML5 y CSS3, programación web Apache y PHP, gestion de sistemas informaticos Linux y Windows, entre otros.</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/adrià-ferrer-sanz-53829222b/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/Adrixcven/Portfoli"><i class="fab fa-github"></i></a>
@@ -104,11 +104,11 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Institut Nicolau Copèrnic, España</h3>
-                            <div class="subheading mb-3">CFGS DESENVOLUPAMENT D'APLICACIONS MULTIPLATAFORMA</div>
+                            <div class="subheading mb-3">CFGS Desarrollo de Aplicaciones Multiplataforma</div>
                            <!-- <div>Computer Science - Web Development Track</div>
                             <p>GPA: 3.23</p>-->
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">2020 - 2022</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">2021 - 20xx</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
@@ -118,22 +118,14 @@
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">2020</span></div>
                     </div>
-                     <div class="d-flex flex-column flex-md-row justify-content-between">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">Colegio San José de Guatire, Venezuela</h3>
-                            <div class="subheading mb-3">Título de Bachiller Mención Ciencias</div>
-                            <!--<p>GPA: 3.56</p>-->
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">2016</span></div>
-                    </div>
                 </div>
             </section>
             <hr class="m-0" />
             <!-- Skills-->
             <section class="resume-section" id="skills">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Habilitats</h2>
-                    <div class="subheading mb-3">Llenguatges de Programació</div>
+                    <h2 class="mb-5">Habilidades</h2>
+                    <div class="subheading mb-3">Lenguajes de programación</div>
                     <ul class="list-inline dev-icons">
                         <li class="list-inline-item"><i class="fab fa-java"></i></li>
                         <li class="list-inline-item"><i class="fab fa-html5"></i></li>
@@ -148,7 +140,7 @@
                         <li class="list-inline-item"><i class="fab fa-grunt"></i></li>
                         <li class="list-inline-item"><i class="fab fa-npm"></i></li>-->
                     </ul>
-                      <div class="subheading mb-3">Softwares & Eines</div>
+                      <div class="subheading mb-3">Softwares & Herramientas</div>
                     <ul class="list-inline dev-icons">
                         <li class="list-inline-item"><i class="fab fa-github"></i></li>
                         <li class="list-inline-item"><i class="fab fa-gitlab"></i></li>
@@ -163,7 +155,7 @@
                         <li class="list-inline-item"><i class="fab fa-grunt"></i></li>
                         <li class="list-inline-item"><i class="fab fa-npm"></i></li>-->
                     </ul>
-                     <div class="subheading mb-3">Sistemas Operatius</div>
+                     <div class="subheading mb-3">Sistemas Operativos</div>
                     <ul class="list-inline dev-icons">
                         <li class="list-inline-item"><i class="fab fa-linux"></i></li>
                         <li class="list-inline-item"><i class="fab fa-ubuntu"></i></li>
@@ -179,23 +171,23 @@
                         <li class="list-inline-item"><i class="fab fa-grunt"></i></li>
                         <li class="list-inline-item"><i class="fab fa-npm"></i></li>-->
                     </ul>
-                  <div class="subheading mb-3">Competències</div>
+                  <div class="subheading mb-3">Competencias</div>
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Gestió de Sistemes Informàtics
+                            Gestion de Sistemas Operativos
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Desenvolupament de projectes en Java
+                            Desarrollo de proyectos en Java
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Diseny i Programació Web
+                            Diseño y programación web
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Gestió de Bases de Dades 
+                            Gestion de base de datos.
                         </li>
                     </ul>
                 </div>
@@ -204,7 +196,7 @@
             <!-- Interests-->
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Interessos</h2>
+                    <h2 class="mb-5">Intereses</h2>
                     <p>Abans de decidir-me a estudiar aquest Cicle Superior vaig estar dos semestres a la facultat de Ingeniería Mecatrónica perquè m'agraden les matemàtiques ja que tenia interès pel món de la programació i volia conèixer el funcionament intern dels aparells elèctrics/electrònics i/o maquinària.</p>
                     <p class="mb-0">M'agrada fer coses diferents per sentir que aprofito la meva vida. M'apasiona l'aprenentatge i viure experiències que amplien els meus horizonts, per exemple viatjar, ajudar als altres o aprendre un idioma.</p>
                      <p class="mb-0">Usualment estic pensant i creant plans per negocis que em beneficïin a la vegada que genero una marca positiva al món.</p>
@@ -214,16 +206,16 @@
             <!-- Awards-->
             <section class="resume-section" id="awards">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Projectes</h2>
+                    <h2 class="mb-5">Proyectos</h2>
                     <ul class="fa-ul mb-0">
                         <li>          
                             <a href="https://serhumanosignifica.wixsite.com/inicio">Pàgina Web Ser Humano Significa</a>
                         </li>
                          <li>          
-                            <a href="https://roxanagarrido.github.io/supernova-software-enterprise/">Supernova Software Enterprise per al mòdul d'Empresa</a>  
+                            <a href="https://roxanagarrido.github.io/supernova-software-enterprise/">Supernova Software Enterprise para el modulo de Empresa</a>  
                         </li>
                          <li>          
-                            <a href="https://roxanagarrido.github.io/coper-aventura/">Pàgina web per al mòdul de Llenguatge de marques (HTML5 i CSS3)</a>  
+                            <a href="https://roxanagarrido.github.io/coper-aventura/">Pàgina web Para un modulo de Lenguaje de Marcas (HTML5 i CSS3)</a>  
                         </li>       
                    <!-- <ul class="fa-ul mb-0">
                         <li>
