--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         <span class="text-primary">Ferrer</span>
                     </h1>
                     <div class="subheading mb-5">
-                        Carrer ..... - Terrassa · Barcelona 08... · (+34) 666 111 222·
+                        Carrer ..... - Terrassa · Barcelona 08... · (+34) xxx xx xx xx·
                         <a href="mailto:email@gmail.com">email@gmail.com</a>
                     </div>
                     <p class="lead mb-5">Estudiante de informatica cursando el Ciclo Formativo de Grado Superior en Desarrollo de Aplicaciones Multiplataforma en el instituto Nicolau Copernic de Terrassa.</p>
@@ -112,11 +112,19 @@
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Nascor Formación, España</h3>
-                            <div class="subheading mb-3">Curs Online Habilitats Directives</div>
+                            <h3 class="mb-0">Institut Nicolau Copèrnic, España</h3>
+                            <div class="subheading mb-3">CFGM Sistemas Microinformaticos y redes</div>
                             <!--<p>GPA: 3.56</p>-->
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">2020</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">2019-2021</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Sagrat Cor de Jesus  Terrassa</h3>
+                            <div class="subheading mb-3">ESO</div>
+                            <!--<p>GPA: 3.56</p>-->
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">2015-2019</span></div>
                     </div>
                 </div>
             </section>
@@ -197,9 +205,8 @@
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Intereses</h2>
-                    <p>Abans de decidir-me a estudiar aquest Cicle Superior vaig estar dos semestres a la facultat de Ingeniería Mecatrónica perquè m'agraden les matemàtiques ja que tenia interès pel món de la programació i volia conèixer el funcionament intern dels aparells elèctrics/electrònics i/o maquinària.</p>
-                    <p class="mb-0">M'agrada fer coses diferents per sentir que aprofito la meva vida. M'apasiona l'aprenentatge i viure experiències que amplien els meus horizonts, per exemple viatjar, ajudar als altres o aprendre un idioma.</p>
-                     <p class="mb-0">Usualment estic pensant i creant plans per negocis que em beneficïin a la vegada que genero una marca positiva al món.</p>
+                    <p class="mb-0">Tengo un gran interes en programar distintos tipos de programas.</p>
+                     <p class="mb-0">Usualmente estoy pensando y creando planes para negocios que me beneficen a la vez que genero una marca positiva en el mundo.</p>
                 </div>
             </section>
             <hr class="m-0" />
