--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Sagrat Cor de Jesus  Terrassa</h3>
-                            <div class="subheading mb-3">ESO</div>
+                            <div class="subheading mb-3">Educacion Secundaria Obligatoria</div>
                             <!--<p>GPA: 3.56</p>-->
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">2015-2019</span></div>
