--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
                         <span class="text-primary">Ferrer</span>
                     </h1>
                     <div class="subheading mb-5">
-                        Carrer ..... - Terrassa · Barcelona 08... · (+34) xxx xx xx xx·
-                        <a href="mailto:email@gmail.com">email@gmail.com</a>
+                        Carrer Mestre Tries - Terrassa · Barcelona 08223 · (+34) 618 39 28 08·
+                        <a href="mailto:email@gmail.com">adriaferrer16@gmail.com</a>
                     </div>
                     <p class="lead mb-5">Estudiante de informatica cursando el Ciclo Formativo de Grado Superior en Desarrollo de Aplicaciones Multiplataforma en el instituto Nicolau Copernic de Terrassa.</p>
                     <p class="lead mb-5">Adquiriendo conocimientos en programacion JAVA, gestion de base de datos SQL y NoSQL, Lenguajes HTML5 y CSS3, programación web Apache y PHP, gestion de sistemas informaticos Linux y Windows, entre otros.</p>
