--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
                     </h1>
                     <div class="subheading mb-5">
                         Carrer Mestre Tries - Terrassa · Barcelona 08223 · (+34) 618 39 28 08·
-                        <a href="mailto:email@gmail.com">adriaferrer16@gmail.com</a>
+                        <a href="mailto:adriaferrer16@gmail.com">adriaferrer16@gmail.com</a>
                     </div>
                     <p class="lead mb-5">Estudiante de informatica cursando el Ciclo Formativo de Grado Superior en Desarrollo de Aplicaciones Multiplataforma en el instituto Nicolau Copernic de Terrassa.</p>
-                    <p class="lead mb-5">Adquiriendo conocimientos en programacion JAVA, gestion de base de datos SQL y NoSQL, Lenguajes HTML5 y CSS3, programación web Apache y PHP, gestion de sistemas informaticos Linux y Windows, entre otros.</p>
+                    <p class="lead mb-5">Adquiriendo conocimientos en programacion JAVA y Kotlin, gestion de base de datos SQL y NoSQL, Lenguajes HTML5 y CSS3, programación web Apache y PHP, gestion de sistemas informaticos Linux y Windows, entre otros.</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/adrià-ferrer-sanz-53829222b/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/Adrixcven/Portfoli"><i class="fab fa-github"></i></a>
@@ -108,7 +108,7 @@
                            <!-- <div>Computer Science - Web Development Track</div>
                             <p>GPA: 3.23</p>-->
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">2021 - 20xx</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">2021 - 2023</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
