--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         <a href="mailto:adriaferrer16@gmail.com">adriaferrer16@gmail.com</a>
                     </div>
                     <p class="lead mb-5">Estudiante de informatica cursando el Ciclo Formativo de Grado Superior en Desarrollo de Aplicaciones Multiplataforma en el instituto Nicolau Copernic de Terrassa.</p>
-                    <p class="lead mb-5">Adquiriendo conocimientos en programacion JAVA y Kotlin, gestion de base de datos SQL y NoSQL, Lenguajes HTML5 y CSS3, programación web Apache y PHP, gestion de sistemas informaticos Linux y Windows, entre otros.</p>
+                    <p class="lead mb-5">Adquiriendo conocimientos en programacion JAVA, Kotlin y Unity, gestion de base de datos SQL y NoSQL, Lenguajes HTML5 y CSS3, programación web Apache y PHP, gestion de sistemas informaticos Linux y Windows, entre otros.</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/adrià-ferrer-sanz-53829222b/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/Adrixcven/Portfoli"><i class="fab fa-github"></i></a>
@@ -108,7 +108,7 @@
                            <!-- <div>Computer Science - Web Development Track</div>
                             <p>GPA: 3.23</p>-->
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">2021 - 2023</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">2021 - 2024</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
@@ -197,6 +197,10 @@
                             <span class="fa-li"><i class="fas fa-check"></i></span>
                             Gestion de base de datos.
                         </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            Unity.
+                        </li>
                     </ul>
                 </div>
             </section>
@@ -216,13 +220,13 @@
                     <h2 class="mb-5">Proyectos</h2>
                     <ul class="fa-ul mb-0">
                         <li>          
-                            <a href="https://serhumanosignifica.wixsite.com/inicio">Pàgina Web Ser Humano Significa</a>
+                            <a href="https://github.com/Adrixcven/Clov-is">Clov-Is</a>
                         </li>
                          <li>          
-                            <a href="https://roxanagarrido.github.io/supernova-software-enterprise/">Supernova Software Enterprise para el modulo de Empresa</a>  
+                            <a href="https://github.com/Adrixcven/Roap">ROAP</a>  
                         </li>
                          <li>          
-                            <a href="https://roxanagarrido.github.io/coper-aventura/">Pàgina web Para un modulo de Lenguaje de Marcas (HTML5 i CSS3)</a>  
+                            <a href="https://github.com/Adrixcven/SonicUnityGame">Sonic Unity</a>  
                         </li>       
                    <!-- <ul class="fa-ul mb-0">
                         <li>
