--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@
                     <ul class="list-inline dev-icons">
                         <li class="list-inline-item"><i class="fab fa-github"></i></li>
                         <li class="list-inline-item"><i class="fab fa-gitlab"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-unity"></i></li>
                        <!-- <li class="list-inline-item"><i class="fab fa-js-square"></i></li>
                         <li class="list-inline-item"><i class="fab fa-angular"></i></li>
                         <li class="list-inline-item"><i class="fab fa-react"></i></li>
